# hydra

./: .gitignore  pyproject.toml
.beads/: metadata.json
exercises/: bogus_prevention.py  bogus_prevention_normality.py  conjunctive_overdetermination.py  early_preemption.py  late_preemption.py  obcb.py  symmetric_overdetermination.py  trumping.py  voting.py
scripts/: run_bogus_prevention.sh  run_bogus_prevention_normality.sh  run_obcb.sh  run_voting.sh
transformer/: q1_handler_mechanics.py  q2_transformer_wrapper.py  q3_activation_caching.py  q4_search_for_explanation.py  q5_nnsight_compatibility.py  report.md
transformer/benchmarks/: profile_pipeline.py
transformer/lib/: ac_query.py  batch.py  cache.py  interventions.py  model.py  prefilter.py  verdict.py
transformer/lib/models/: __init__.py  factory.py  gpt2.py  gpt_neox.py  llama.py
transformer/tests/: test_hooked_models.py  test_lib.py  test_phase4.py  test_real_gpt2.py
