[project]
name = "hydra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chirho>=0.3.0",
    "nnsight>=0.7.0",
    "pyro-ppl>=1.9.1",
    "torch>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
